kubernetes/cluster/machine-learning/perplexica/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perplexica
  namespace: machine-learning
  labels:
    app.kubernetes.io/name: perplexica
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    # nginx.ingress.kubernetes.io/auth-response-headers: >-
    #   Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    # nginx.ingress.kubernetes.io/auth-signin: >-
    #   https://car.brhd.io/outpost.goauthentik.io/start?rd=$escaped_request_uri
    # nginx.ingress.kubernetes.io/auth-snippet: |
    #   proxy_set_header X-Forwarded-Host $http_host;
    # nginx.ingress.kubernetes.io/auth-url: >-
    #   http://authentik-outpost-embedded.default.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
spec:
  rules:
    - host: px.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: perplexica
                port:
                  number: 3000
  tls:
    - hosts:
        - px.brhd.io
